# gateway

./: .env.md  README.md  pyproject.toml  requirements.txt
docker/: Dockerfile
gateway_service/core/: app.py
gateway_service/database/: engine.py  session.py
gateway_service/database/tables/: tasks.py
gateway_service/injections/: __init__.py  db_service.py  db_session.py  task_service.py
gateway_service/manager/: __init__.py  gateway_manager.py
gateway_service/models/: __init__.py  status.py
gateway_service/routers/: __init__.py  task.py
gateway_service/schemas/: __init__.py  base.py  task.py
gateway_service/services/: __init__.py  database.py  task.py
gateway_service/settings/: __init__.py  database.py  message.py
libs/: ipr-0.1.0-py3-none-any.whl  nodal_analysis-0.1.0-py3-none-any.whl  vlp-0.1.0-py3-none-any.whl
migrations/: env.py
migrations/versions/: 2024_02_02_1610-129b4c096020_create_the_task_table.py
