[tool.poetry]
name = "gateway-service"
version = "0.1.0"
description = ""
authors = ["Chaban Sergey <loriston@rambler.ru>"]
readme = "README.md"
exclude = [
            "gateway_service/certs",
            "gateway_service/core",
            "gateway_service/database",
            "gateway_service/injections",
            "gateway_service/routers",
            "gateway_service/services",
            "gateway_service/settings"
        ]

[tool.poetry.dependencies]
python = "3.11.1"

pydantic = "^2.4.2"


[tool.poetry.group.service.dependencies]
aiohttp = "3.9.3"
alembic = "1.13.1"
asyncpg = "0.26.0"
fastapi = "0.109.0"
pika = "1.3.2"
pydantic-settings = "2.1.0"
sqlalchemy = "2.0.6"
uvicorn = "0.18.3"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
flake8 = "^7.0.0"
pytest = "^8.0.0"


[tool.poetry.group.custom.dependencies]
common-core = {path = "../common/common_core", develop = true}
common-rabbit = {path = "../common/common_rabbit", develop = true}
ipr = {path = "../mock_ipr_service", develop = true}
vlp = {path = "../vlp_service", develop = true}
nodal-analysis = {path = "../nodal_analysis", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
